--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,10 @@
 motorA:
   dir_A: 2
   dir_B: 4
-  pwma: 17
+  pwm: 17
+  freq: 50
 motorB:
-  dir_a: 21
-  dir_b: 16
-  pwmb: 12
+  dir_A: 21
+  dir_B: 16
+  pwm: 12
+  freq: 50
